# LLVM_learning

./: .gitignore  README.md  llvm-ir-syntax-guide.md
01-overview/: demo.out  demo.sh  demo_tutorial.md  hello.c  notes.md
02-ir-basics/: demo.sh  notes.md
02-ir-basics/examples/: gep.ll  max.ll  max_mem.ll
03-build-ir/: build_ir.py  demo.sh  notes.md
04-opt-passes/: demo.sh  notes.md
04-opt-passes/examples/: dce.ll  gvn.ll  instcombine.ll  loop.ll  sccp.ll
05-custom-pass/: CMakeLists.txt  Mul2Shl.cpp  build.sh  notes.md
05-custom-pass/examples/: mul_demo.ll
06-correctness/: demo.sh  notes.md
06-correctness/examples/: overflow.ll
07-alive2/: demo.sh  notes.md
07-alive2/examples/: correct_mul2shl.ll  nsw_question.ll  pass_input.ll  wrong_add_nsw.ll  wrong_overflow.ll
scripts/: .env.example  .gitignore  run.sh  vm.sh
